--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -44,7 +44,8 @@ body {
     }
 }
 
-#mySidenav a:nth-child(3) {
+#mySidenav a:nth-child(3),
+#mySidenav a:nth-child(4) {
     text-align: center;
     padding: 0;
     margin: 0;
@@ -59,7 +60,8 @@ body {
 }
 
 .menu a,
-#mySidenav a:nth-child(3) {
+#mySidenav a:nth-child(3),
+#mySidenav a:nth-child(4) {
     color: white;
     text-decoration: none;
     padding: 10px;
@@ -73,7 +75,7 @@ body {
 }
 
 .menu a:hover,
-#mySidenav a:nth-child(3):hover {
+#mySidenav a:nth-child(3):hover, #mySidenav a:nth-child(4):hover {
     background: #f98f4d;
     color: #fff;
     box-shadow: 0 0 5px #f98f4d, 0 0 25px #f98f4d, 0 0 50px #f98f4d, 0 0 100px #f98f4d;
@@ -131,7 +133,7 @@ p {
 }
 
 .sidenav {
-    height: 30.5%;
+    height: 42%;
     width: 0;
     position: fixed;
     z-index: 1;
@@ -176,15 +178,7 @@ p {
 }
 
 #mySidenav ul li:nth-child(1) {
-    margin-left: 20%;
+	margin-left: 0%;
     color: #f98f4d;
-    font-size: 20px;
-}
-
-#mySidenav ul li:nth-child(3),
-#mySidenav ul li:nth-child(4),
-#mySidenav ul li:nth-child(5) {
-    color: #f98f4d;
-    margin-left: 12%;
-    padding-bottom: 10px;
+    font-size: 30px;
 }
